PEG-699 merge from team/FRAMEWORK into master
Change-Id: I935eed5e028fced4767530ea500c968281ef39ac